--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "~4.16.0",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.16",
     "morgan": "~1.9.0"
   }
