--- a/server/package.json
+++ b/server/package.json
@@ -16,5 +16,10 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.16",
     "morgan": "~1.9.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
